--- a/angular.json
+++ b/angular.json
@@ -102,6 +102,13 @@
               "src/styles.scss"
             ],
             "scripts": []
+          },
+          "configurations": {
+            "ci": {
+              "progress": false,
+              "watch": false,
+              "browsers": "ChromeHeadlessCI"
+            }
           }
         }
       }
