--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,14 @@
-name: Continuous Integration
+name: Continuous Integration # Nombre del workflow
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: # ¿Cuando ejecutar?
+  push: # Al hacer push a las siguientes ramas
+    branches: [main] # o master
+  pull_request: # Al crear un pull request a las liguientes ramas
+    branches: [main] # o master
 
 jobs:
-  install:
-    name: Installation # Nonbre del Job
+  ci:
+    name: Continuous Integration # Nombre del Job
     runs-on: ubuntu-latest # Ejecutar en Ubuntu
     steps:
       - uses: actions/checkout@v2 # Clonar repositorio actual
@@ -28,3 +28,9 @@ jobs:
         # No ejecutar si se obtuvo node_modules de cache
         if: steps.node-cache.outputs.cache-hit != 'true' 
         run: npm install
+      # Generar compilación de producción
+      - name: Run Build command
+        run: npm run build -- --prod
+      # Ejecutar pruebas unitarias
+      - name: Run Unit tests
+        run: npm run test -- --configuration=ci
